actualizacion de mapa2

--- a/mapa2.html
+++ b/mapa2.html
@@ -27,7 +27,7 @@
        			var marker = new google.maps.Marker({
        			position:point,
        			map:firstmap,
-       			title:'PDI PRUEBA',
+       			title:'PDI PRUEBAsss',
        			draggable:true,
        			icon:'brujula.png'
        			})
